--- a/src/sass/_common.sass
+++ b/src/sass/_common.sass
@@ -15,7 +15,6 @@ html
 	box-sizing: inherit
 
 body
-	background: #FFF
 	line-height: 1.25
 	font-size: 14px
 	font-family: 'Pragmatica', Arial, sans-serif
@@ -73,3 +72,6 @@ img
 			left: 10px
 			top: 50%
 			margin-top: -6px
+
+.parallax-mirror 
+	background-color: #2a3337
