--- a/src/sass/helpers/_mixins.sass
+++ b/src/sass/helpers/_mixins.sass
@@ -3,7 +3,6 @@
 // fonts
 =futuris()
   font-family: 'Futuris', Arial, sans-serif
-
 // width
 =r($width)
   @media only screen and (max-width: $width+ "px")
@@ -277,3 +276,5 @@
   @if $letter-spacing != null
     letter-spacing: ($letter-spacing / 1000) + em
 
+.parallax-mirror 
+  background-color: #2a3337
