--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -90,7 +90,11 @@
 	color: white
 	padding-top: 140px
 	padding-bottom: 30px
-	text-align: center	
+	text-align: center
+	background-repeat: no-repeat
+	background-size: cover
+	background-attachment: local
+	background-attachment: fixed
 	h1
 		text-transform: uppercase
 		font-size: 24px
@@ -114,6 +118,10 @@
 			line-height: 1.2
 			width: 284px
 			margin: 70px 0 0
+	.gcs-slogan
+		display: none
+		+rmin(800)
+			display: block		
 	.woman-img
 		display: none
 	+rmin(800)
@@ -335,7 +343,7 @@
 		+rmin(800)
 			display: inline-block
 			width: 50%
-			margin: 0 auto
+			margin: 0 -10px 0 -10px
 		+rmin(1000)
 			width: auto
 			max-width: 100%
@@ -356,15 +364,23 @@
 	+rmin(800)
 		float: right
 		padding-top: 20px
+		.top
+			float: right
+			text-align: center
+			padding-right: 20px
 		.mice-block:first-child
 			margin-bottom: 50px
 		p
-			text-align: right		
+			text-align: right
+			clear: both
 .mice-block
 	margin: 30px 0
 	.icon
 		height: 75px
 		position: relative
+		display: block
+		&:focus
+			outline: none
 		img
 			position: absolute
 			margin: auto
@@ -373,7 +389,7 @@
 			right: 0
 			left: 0
 	+rmin(800)
-		width: 180px
+		width: 220px
 		margin: 22px 0
 	h3
 		text-transform: uppercase
@@ -471,11 +487,13 @@
 	float: left
 	margin: 10px 0
 	text-transform: uppercase
-	font-size: 17px
-	padding: 0 18px
+	font-size: 14px
 	.icon
 		position: relative
 		height: 70px
+		display: block
+		&:focus
+			outline: none
 		img
 			position: absolute
 			margin: auto
@@ -487,6 +505,8 @@
 		clear: both	
 	+rmin(1000)
 		width: 20%
+		font-size: 17px
+		padding: 0 18px
 		&:nth-child(2n+1)
 			clear: none	
 
@@ -785,3 +805,7 @@ a.go-top
 
 .mfp-ready .gcs-popup
 	opacity: 1
+
+.gcs-popup-single, .gcs-popup-news
+	.gcs-popup-block.share
+		margin: 20px 0
