--- a/src/sass/lib/_magnific-popup.scss
+++ b/src/sass/lib/_magnific-popup.scss
@@ -44,8 +44,13 @@
   display: inline-block;
   vertical-align: middle;
   margin: 0 auto;
+  padding: 10px;
   text-align: left;
-  z-index: 1045; }
+  z-index: 1045; 
+  @include rmin(800) {
+      padding: 30px;
+  }
+}
 
 .mfp-inline-holder .mfp-content,
 .mfp-ajax-holder .mfp-content {
@@ -317,18 +322,21 @@ img.mfp-img {
 /* content at start */
 .mfp-fade.mfp-wrap .mfp-content {
   opacity: 0;
-
-  -webkit-transition: all 0.15s ease-out;
-  -moz-transition: all 0.15s ease-out;
-  transition: all 0.15s ease-out;
+  transform: scale(0.7);
+  -webkit-transition: all 0.3s ease-out;
+  -moz-transition: all 0.3s ease-out;
+  transition: all 0.3s ease-out;
 }
+
 /* content animate it */
 .mfp-fade.mfp-wrap.mfp-ready .mfp-content {
   opacity: 1;
+  transform: scale(1);
 }
 /* content animate out */
 .mfp-fade.mfp-wrap.mfp-removing .mfp-content {
   opacity: 0;
+  transform: scale(0.7);
 }
 
 @media screen and (max-width: 800px) and (orientation: landscape), screen and (max-height: 300px) {
