--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -11,7 +11,7 @@ block content
 				p.wow.fadeInLeft(data-wow-delay="1.6s") Стирая границы возможного, мы открываем для Вас неизведанные горизонты: удивительные события, незабываемые впечатления, новые города и страны…
 			.promo-right.wow.fadeInRight(data-wow-delay="1.6s")
 				span.wow.gcs-slogan.fadeInDown(data-wow-delay="2.6s") gcs взгляни на мир по-новому
-				img.wow.woman-img(alt="" src="img/woman.png")
+				img.wow.woman-img(alt="gcs взгляни на мир по-новому" src="img/woman.png")
 	// end PROMO
 	// start WELCOME
 	section.welcome#welcome
@@ -20,12 +20,12 @@ block content
 		.container
 			.welcome-block.wow.fadeInLeft
 				.welcome-block-top
-					img(alt="" src="img/globe.svg" width="74" height="74")
+					img(alt="Mice Департамент" src="img/globe.svg" width="74" height="74")
 					h3 #[a.js-anchor(href="#mice-department") Mice] Департамент
 				p Мы всегда стремимся оптимизировать затраты клиентов и подобрать оптимальный вариант проведения любых мероприятий: служебных поездок, выездных конференций, семинаров, тренингов и инсентив-поездок
 			.welcome-block.wow.fadeInRight
 				.welcome-block-top
-					img(alt="" src="img/people-blue.svg" width="80" height="78")
+					img(alt="Event Департамент" src="img/people-blue.svg" width="80" height="78")
 					h3 #[a.js-anchor(href="#event-department") Event] Департамент
 				p Предлагаем профессиональную организацию и проведение корпоративных вечеринок, в т.ч. VIP категории, а также детских и спортивных праздников, предоставляем техническое обеспечение и ресторанное обслуживание мероприятий.
 	// end WELCOME
@@ -127,27 +127,27 @@ block content
 			.features-group
 				.feature.wow.fadeInUp(data-wow-delay="0.3s")
 					.feature-icon
-						img(alt="" src="img/graph.svg" width="65" height="65")
+						img(alt="12 лет на рынке услуг" src="img/graph.svg" width="65" height="65")
 					h4.feature-count.js-counter 12
 					p лет на рынке #[br] услуг
 				.feature.wow.fadeInUp(data-wow-delay="0.6s")
 					.feature-icon
-						img(alt="" src="img/bag-blue.svg" width="65" height="65")
+						img(alt="200 и более проектов по всему миру" src="img/bag-blue.svg" width="65" height="65")
 					h4.feature-count.js-counter 2000
 					p и более проектов #[br] по всему миру
 				.feature.wow.fadeInUp(data-wow-delay="0.9s")
 					.feature-icon
-						img(alt="" src="img/people-down.svg" width="65" height="65")
+						img(alt="25 000 человек на одном мероприятии" src="img/people-down.svg" width="65" height="65")
 					h4.feature-count.js-counter 25 000
 					p человек #[br] на одном #[br] мероприятии
 				.feature.wow.fadeInUp(data-wow-delay="1.2s")
 					.feature-icon
-						img(alt="" src="img/globe-mark.svg" width="65" height="65")
+						img(alt="50 стран, где мы работаем" src="img/globe-mark.svg" width="65" height="65")
 					h4.feature-count.js-counter 50
 					p стран, где мы #[br] работаем
 				.feature.wow.fadeInUp(data-wow-delay="1.5s")
 					.feature-icon
-						img(alt="" src="img/list.svg" width="65" height="65")
+						img(alt="30 договоров на годовое обслуживание" src="img/list.svg" width="65" height="65")
 					h4.feature-count.js-counter 30
 					p договоров #[br] на годовое #[br] обслуживание			
 	// end FEATURES
@@ -156,31 +156,31 @@ block content
 		.container
 			h2 #[span Mice] департамент
 			.mice-group
-				img.globe-big(src="img/globe-big.png" data-wow-offset="200" data-wow-delay="3.4s")
+				img.globe-big(src="img/globe-big.png" alt="Земной шар" data-wow-offset="200" data-wow-delay="3.4s")
 				.mice-group-left
 					.mice-block(data-wow-delay="1s" data-wow-offset="200")
 						.top
 							a.icon.popup-link(href="#gcs-popup-single")
-								img(alt="" src="img/map.svg" width="108" height="56")
+								img(alt="деловые мероприятия в России" src="img/map.svg" width="108" height="56")
 							h3 Деловые мероприятия #[br] в России
 						p Мы не просто оказываем услуги по организации конференций, мы создаем по-настоящему комфортную бизнес-атмосферу.
 					.mice-block(data-wow-delay="2.2s" data-wow-offset="-400")
 						.top
 							a.icon.popup-link(href="#gcs-popup-single")
-								img(alt="" src="img/globe.svg" width="66" height="66")
+								img(alt="деловые мероприятия за рубежом" src="img/globe.svg" width="66" height="66")
 							h3 Деловые мероприятия #[br] за рубежом
 						p Одним из центральных видов нашей деятельности - является деловых мерпориятий более, чем в 50 странах мира.
 				.mice-group-right
 					.mice-block(data-wow-delay="1.6s" data-wow-offset="200")
 						.top
 							a.icon.popup-link(href="#gcs-popup-single")
-								img(alt="" src="img/heart.svg" width="108" height="56")
+								img(alt="Интенсив поездки" src="img/heart.svg" width="108" height="56")
 							h3 Интенсив #[br] поездки
 						p Полная организация поощрительных поездок для сотрудников компаний, начиная с выбора направления и заканчивая бронированием билетов для участников.
 					.mice-block(data-wow-delay="2.8s" data-wow-offset="-400")
 						.top
 							a.icon.popup-link(href="#gcs-popup-single")
-								img(alt="" src="img/prize.svg" width="79" height="74")
+								img(alt="Наши награды" src="img/prize.svg" width="79" height="74")
 							h3 Наши #[br] награды
 						p За 12 лет своего существования компания GCS Business Group стала обладателем ряда профессиональных наград и множества благодарственных писем от наших клиентов.
 	// end mice department
@@ -189,7 +189,7 @@ block content
 		.container
 			h2 #[span Event] департамент
 			.event-advantages
-				img.first.wow.zoomIn(alt="" src="img/infinity.svg" class="event-department-img")
+				img.first.wow.zoomIn(alt="Event департамент" src="img/infinity.svg" class="event-department-img")
 				.event-advantages-group
 					.event-advantage.first.wow.zoomIn
 						img(alt="" src="img/group.svg" width="85" height="70")
@@ -233,15 +233,15 @@ block content
 							.slide
 								img(alt="" src="img/news.jpg")
 								h4 
-									a(href="#") BBT Awards 2016
+									a(href="#gcs-popup-news") BBT Awards 2016
 								p Дорогие друзья и партнеры GCS Business Group, наша компания номинирована в качестве Лучшего MICE-агентства в конкурсе BBT Awards 2016! 
-								a.btn.popup-link(href="gcs-popup-news") Подробнее
+								a.btn.popup-link(href="#gcs-popup-news") Подробнее
 							.slide
 								img(alt="" src="img/news.jpg")
 								h4 
-									a(href="#") Корпоративное лето 2016
+									a(href="#gcs-popup-news") Корпоративное лето 2016
 								p Предлагаем Вашему вниманию каталог идей. Как провести лето в компании коллег с пользой!
-								a.btn.popup-link(href="gcs-popup-news") Подробнее
+								a.btn.popup-link(href="#gcs-popup-news") Подробнее
 					.news-item
 						.news-item-slider
 							.slide
@@ -261,13 +261,13 @@ block content
 							.slide
 								img(alt="" src="img/news.jpg")
 								h4 
-									a(href="#") GCS Business Group
+									a(href="#gcs-popup-news") GCS Business Group
 								p Дорогие подписчики, друзья, партнеры! Сегодня замечательный день - День рождения нашей компании! GCS Business Group исполнилось 12 лет! 
 								a.btn.popup-link(href="#gcs-popup-news") Подробнее
 							.slide
 								img(alt="" src="img/news.jpg")
 								h4 
-									a(href="#") GCS Business Group
+									a(href="#gcs-popup-news") GCS Business Group
 								p Дорогие подписчики, друзья, партнеры! Сегодня замечательный день - День рождения нашей компании! GCS Business Group исполнилось 12 лет! 
 
 								a.btn.popup-link(href="#gcs-popup-news") Скачать						
@@ -276,7 +276,7 @@ block content
 	section.clients(data-parallax="scroll" data-image-src="img/mice-bg.jpg")
 		.container
 			h2 Нам доверяют
-			img.clients-brands(src="img/infinity-brands.png")
+			img.clients-brands(src="img/infinity-brands.png" alt="")
 	// end CLIENTS
 	// start CONTACT
 	section.contact#contact(data-parallax="scroll" data-image-src="img/contact-bg.jpg")
@@ -354,7 +354,7 @@ block content
 			.gcs-popup-text Lorem ipsum dolor sit amet, consectetuer  adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna Lorem ipsum dolor sit amet.....Lorem ipsum dolor sit amet, consectetuer  adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna Lorem ipsum dolor sit amet.....Lorem ipsum dolor sit amet, consectetuer  adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna Lorem ipsum dolor sit amet.....Lorem ipsum dolor sit amet, consectetuer  adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna Lorem ipsum dolor sit amet.....Lorem ipsum dolor sit amet, consectetuer  adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna Lorem ipsum dolor sit amet.....Lorem ipsum dolor sit amet, consectetuer  adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna Lorem ipsum dolor sit amet.....euismod tincidunt ut laoreet dolore magna Lorem ipsum dolor sit amet.....Lorem ipsum dolor sit amet, consectetuer  adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna Lorem ipsum dolor sit amet.....Lorem ipsum dolor sit amet, consectetuer  adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna Lorem ipsum dolor sit amet.....
 	// end GCS POPUP
 	// start GCS POPUP NEWS
-	.gcs-popup.gcs-popup-single.mfp-hide#gcs-popup-news
+	.gcs-popup.gcs-popup-news.mfp-hide#gcs-popup-news
 		.gcs-popup-inner.scrollbar-inner
 			.gcs-popup-nav
 				a.arr-popup-prev(href="#")
