--- a/src/templates/layouts/_head.jade
+++ b/src/templates/layouts/_head.jade
@@ -5,4 +5,4 @@ meta(name="viewport" content="width=device-width, initial-scale=1, user-scalable
 meta(name="theme-color" content="#fff")
 meta(name="format-detection" content="telephone=no")
 link(rel="stylesheet" media="all" href="css/app.css")
-script(type="text/javascript" src="https://maps.googleapis.com/maps/api/js")
+script(type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCU7I2U0GnGQ-h9ARlAJBEKkS3chCFlkyI")
