--- a/src/templates/partials/_header.jade
+++ b/src/templates/partials/_header.jade
@@ -2,7 +2,7 @@
 header.header.animated.fadeIn(role="banner")
 	.container
 		a.logo(href="#")
-			img(src="img/logo.svg" width="136" height="47")
+			img(src="img/logo.svg" alt="GCS - global corporate service" width="136" height="47")
 		aside.header-aside
 			a.nav-trigger-wrap(role="button")
 				span.nav-trigger
