--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -1,7 +1,4 @@
 
-.block
-	display: flex
-
 // HEADER
 .header
 	background-color: rgba(0, 0, 0, 0.36)
@@ -176,10 +173,12 @@
 			color: #8e9191
 			line-height: 1.3
 		+rmin(800)
-			max-width: 385px
+			max-width: 330px
 			float: left
 			&:last-child
 				float: right
+		+rmin(880)
+			max-width: 385px		
 		h3
 			font-weight: 400
 			text-transform: uppercase
@@ -247,9 +246,12 @@
 	&:hover
 		.overlay
 			opacity: 1
+	+rmin(460)
+		width: 50%
+		padding-bottom: 30%		
 	+rmin(800)
-		width: 25%
-		padding-bottom: 17%
+		width: 33.3333%
+		padding-bottom: 22%
 	+rmin(1100)
 		width: 20%
 		padding-bottom: 13.3%	
@@ -293,7 +295,7 @@
 	text-align: center
 	&-group
 		padding: 20px 0
-		+rmin(800)
+		+rmin(880)
 			margin: 0 -50px
 			padding: 56px 0 40px
 	h2
@@ -318,7 +320,7 @@
 	margin: 20px 0
 	width: 50%
 	margin-right: -3px
-	+rmin(800)
+	+rmin(880)
 		width: 20%
 	&-count
 		color: #394a58
@@ -339,6 +341,7 @@
 	text-align: center
 	+rmin(800)
 		padding-bottom: 60px
+		padding-top: 40px
 	.globe-big
 		display: none
 		+rmin(800)
@@ -489,6 +492,10 @@
 	margin: 10px 0
 	text-transform: uppercase
 	font-size: 14px
+	&:last-child
+		width: 100%
+		+rmin(1000)
+			width: 20%
 	.icon
 		position: relative
 		height: 70px
@@ -750,11 +757,11 @@ a.go-top
 		margin-right: -3px
 		vertical-align: top
 		margin: 20px -3px 10px 0
-		max-width: 200px
 		padding-right: 5px
 		text-align: center
 		+rmin(800)
 			width: auto
+			max-width: 200px
 			margin-right: 60px
 			padding-right: 10px
 			text-align: left
