--- a/src/templates/index.jade
+++ b/src/templates/index.jade
@@ -36,88 +36,98 @@ block content
 		.projects-filter
 			.container
 				ul.projects-filter-list
-					li: a.js-active(href="#" data-filter="all") Все
-					li: a(href="#" data-filter="1") Корпоративные мероприятия
-					li: a(href="#" data-filter="2") Тибилдинги
-					li: a(href="#" data-filter="3") Юбилеи компании
-					li: a(href="#" data-filter="4") Презентации
-					li: a(href="#" data-filter="5") Детские праздники
-					li: a(href="#" data-filter="6") Выездные конференции
-					li: a(href="#" data-filter="7") Семинары
-					li: a(href="#" data-filter="8") Инсентив поездки
+					li: a.js-active(href="#" data-filter="*") Все
+					li: a(href="#" data-filter=".sort1") Корпоративные мероприятия
+					li: a(href="#" data-filter=".sort2") Тибилдинги
+					li: a(href="#" data-filter=".sort3") Юбилеи компании
+					li: a(href="#" data-filter=".sort4") Презентации
+					li: a(href="#" data-filter=".sort5") Детские праздники
+					li: a(href="#" data-filter=".sort6") Выездные конференции
+					li: a(href="#" data-filter=".sort7") Семинары
+					li: a(href="#" data-filter=".sort8") Инсентив поездки
 		// end PROJECTS FILTER
 		// start PROJECTS GALLERY		
 		.projects-gallery
-			a.projects-item.filtr-item.popup-link(href="#gcs-popup-1" data-category="1")
+			a.projects-item.sort1.popup-link(href="#gcs-popup-1")
 				img(alt="" src="img/gallery-item1.jpg")
 				.overlay
-					.overlay-body
-						h4 Летнее мероприятие
-						p с квестом и флешмобом
-						span.btn подробнее
-			a.projects-item.filtr-item.popup-link(href="#gcs-popup-2" data-category="1")
+					.overlay-wrap
+						.overlay-body
+							h4 Летнее мероприятие
+							p с квестом и флешмобом
+							span.btn подробнее
+			a.projects-item.sort1.popup-link(href="#gcs-popup-2")
 				img(alt="" src="img/gallery-item2.jpg")
 				.overlay
-					.overlay-body
-						h4 Летнее мероприятие
-						p с квестом и флешмобом
-						span.btn подробнее
-			a.projects-item.filtr-item.popup-link(href="#gcs-popup-1" data-category="2")
+					.overlay-wrap
+						.overlay-body
+							h4 Летнее мероприятие
+							p с квестом и флешмобом
+							span.btn подробнее
+			a.projects-item.sort2.popup-link(href="#gcs-popup-1")
 				img(alt="" src="img/gallery-item3.jpg")
 				.overlay
-					.overlay-body
-						h4 Летнее мероприятие
-						p с квестом и флешмобом
-						span.btn подробнее
-			a.projects-item.filtr-item.popup-link(href="#gcs-popup-2" data-category="2")
+					.overlay-wrap
+						.overlay-body
+							h4 Летнее мероприятие
+							p с квестом и флешмобом
+							span.btn подробнее
+			a.projects-item.sort3.popup-link(href="#gcs-popup-2")
 				img(alt="" src="img/gallery-item4.jpg")
 				.overlay
-					.overlay-body
-						h4 Летнее мероприятие
-						p с квестом и флешмобом
-						span.btn подробнее
-			a.projects-item.filtr-item.popup-link(href="#gcs-popup-1" data-category="3")
+					.overlay-wrap
+						.overlay-body
+							h4 Летнее мероприятие
+							p с квестом и флешмобом
+							span.btn подробнее
+			a.projects-item.sort4.popup-link(href="#gcs-popup-1")
 				img(alt="" src="img/gallery-item5.jpg")
 				.overlay
-					.overlay-body
-						h4 Летнее мероприятие
-						p с квестом и флешмобом
-						span.btn подробнее					
-			a.projects-item.filtr-item.popup-link(href="#gcs-popup-2" data-category="3")
+					.overlay-wrap
+						.overlay-body
+							h4 Летнее мероприятие
+							p с квестом и флешмобом
+							span.btn подробнее					
+			a.projects-item.sort5.popup-link(href="#gcs-popup-2")
 				img(alt="" src="img/gallery-item1.jpg")
 				.overlay
-					.overlay-body
-						h4 Летнее мероприятие
-						p с квестом и флешмобом
-						span.btn подробнее
-			a.projects-item.filtr-item.popup-link(href="#gcs-popup-1" data-category="1")
+					.overlay-wrap
+						.overlay-body
+							h4 Летнее мероприятие
+							p с квестом и флешмобом
+							span.btn подробнее
+			a.projects-item.sort5.popup-link(href="#gcs-popup-1")
 				img(alt="" src="img/gallery-item2.jpg")
 				.overlay
-					.overlay-body
-						h4 Летнее мероприятие
-						p с квестом и флешмобом
-						span.btn подробнее
-			a.projects-item.filtr-item.popup-link(href="#gcs-popup-2" data-category="1")
+					.overlay-wrap
+						.overlay-body
+							h4 Летнее мероприятие
+							p с квестом и флешмобом
+							span.btn подробнее
+			a.projects-item.sort6.popup-link(href="#gcs-popup-2")
 				img(alt="" src="img/gallery-item3.jpg")
 				.overlay
-					.overlay-body
-						h4 Летнее мероприятие
-						p с квестом и флешмобом
-						span.btn подробнее
-			a.projects-item.filtr-item.popup-link(href="#gcs-popup-1" data-category="1")
+					.overlay-wrap
+						.overlay-body
+							h4 Летнее мероприятие
+							p с квестом и флешмобом
+							span.btn подробнее
+			a.projects-item.sort6.popup-link(href="#gcs-popup-1")
 				img(alt="" src="img/gallery-item4.jpg")
 				.overlay
-					.overlay-body
-						h4 Летнее мероприятие
-						p с квестом и флешмобом
-						span.btn подробнее
-			a.projects-item.filtr-item.popup-link(href="#gcs-popup-2" data-category="1")
+					.overlay-wrap
+						.overlay-body
+							h4 Летнее мероприятие
+							p с квестом и флешмобом
+							span.btn подробнее
+			a.projects-item.sort7.popup-link(href="#gcs-popup-2")
 				img(alt="" src="img/gallery-item5.jpg")
 				.overlay
-					.overlay-body
-						h4 Летнее мероприятие
-						p с квестом и флешмобом
-						span.btn подробнее				
+					.overlay-wrap
+						.overlay-body
+							h4 Летнее мероприятие
+							p с квестом и флешмобом
+							span.btn подробнее				
 		// end PROJECTS GALLERY
 	// end PROJECTS
 	// start FEATURES
