--- a/src/templates/partials/_scripts.jade
+++ b/src/templates/partials/_scripts.jade
@@ -3,7 +3,7 @@ block scripts
 	script(type="text/javascript" src="js/lib/jquery.min.js")
 	script(type="text/javascript" src="js/lib/parallax.min.js")
 	script(type="text/javascript" src="js/lib/imagesloaded.js")
-	script(type="text/javascript" src="js/lib/jquery.filterizr.min.js")
+	script(type="text/javascript" src="js/lib/isotope.pkgd.min.js")
 	script(type="text/javascript" src="js/lib/wow.min.js")
 	script(type="text/javascript" src="js/lib/slick.min.js")
 	script(type="text/javascript" src="js/lib/jquery.magnific-popup.min.js")
