--- a/src/sass/_main.sass
+++ b/src/sass/_main.sass
@@ -233,45 +233,53 @@
 					color: white
 
 .projects-gallery
+	margin-right: -4px
 	+clr()
 
 .projects-item
 	width: 100%
-	float: left
 	position: relative
-	overflow: hidden
-	height: 0
-	padding-bottom: 66%
+	//padding-bottom: 66%
 	display: block
+	margin-bottom: -1px
+	margin-right: -1px
+	overflow: hidden
 	&:hover
 		.overlay
 			opacity: 1
+		+rmin(800)
+			img
+				transform: scale(1.2)
 	+rmin(460)
 		width: 50%
-		padding-bottom: 30%		
+		//padding-bottom: 30%		
 	+rmin(800)
 		width: 33.3333%
-		padding-bottom: 22%
+		//padding-bottom: 22%
 	+rmin(1100)
 		width: 20%
-		padding-bottom: 13.3%	
 	img
 		display: block
+		max-width: none
 		width: 100%
-		position: absolute
-		left: 0
-		top: 0
+		transition: all 0.3s
 	.overlay
 		position: absolute
 		top: 0
 		left: 0
 		width: 100%
-		height: 101%
+		height: 100%
 		background-color: rgba(#394a58, 0.78)
 		opacity: 0
 		transition: all 0.3s
 		color: white
-		display: table
+		display: block
+		&-wrap
+			height: 100%
+			display: table
+			text-align: center
+			width: 100%
+			padding: 0 10px
 		&-body
 			display: table-cell
 			vertical-align: middle
@@ -310,7 +318,7 @@
 		position: relative
 		z-index: 10
 		+rmin(800)
-			padding: 22px 0 18px
+			padding: 20px 0 18px
 		span
 			color: $blue-dark
 
@@ -346,7 +354,7 @@
 		display: none
 		+rmin(800)
 			display: inline-block
-			width: 50%
+			width: 40%
 			margin: 0 -10px 0 -10px
 		+rmin(1000)
 			width: auto
@@ -565,6 +573,9 @@
 		&:nth-child(3n+1)
 			clear: left
 
+.news-item-slider
+	.slide
+		padding: 0 1px
 .clients
 	text-align: center
 	padding: 30px 0
@@ -702,6 +713,10 @@ a.go-top
 	background-color: #FFF
 	transition: all 0.4s
 	opacity: 0
+	&-inner
+		+rmin(800)
+			height: 85vh
+			min-height: 500px
 	&-nav
 		position: absolute
 		right: 10px
